--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 
 *{
   box-sizing: border-box;
@@ -9,6 +11,8 @@
 body{
   overflow-x: hidden;
   position: relative;
+  font-family: 'Poppins', sans-serif;
+
 }
 
 .active{
